--- a/telemetry/otel-collector-config.yaml
+++ b/telemetry/otel-collector-config.yaml
@@ -6,6 +6,8 @@ receivers:
       http:
         endpoint: 0.0.0.0:4318
 exporters:
+  prometheus:
+    endpoint: "0.0.0.0:8888"
   debug:
     verbosity: detailed
 processors:
@@ -14,13 +16,13 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [debug]
+      exporters: [prometheus]
       processors: [batch]
     metrics:
       receivers: [otlp]
-      exporters: [debug]
+      exporters: [prometheus]
       processors: [batch]
     logs:
       receivers: [otlp]
-      exporters: [debug]
+      exporters: [prometheus]
       processors: [batch]
