--- a/k8s/webserver-deployment.yaml
+++ b/k8s/webserver-deployment.yaml
@@ -15,6 +15,22 @@ spec:
       containers:
       - name: flask-app
         image: opentelemetry-py:latest
-        imagePullPolicy: Never
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
+        livenessProbe:
+          httpGet:
+            path: /health/live
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 10
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /health/ready
+            port: 8080
+          initialDelaySeconds: 3
+          periodSeconds: 5
+          failureThreshold: 3
+
+
