Create serviceAccount, roles, rolebinding and apply for service

--- a/k8s/base/webserver-deployment.yaml
+++ b/k8s/base/webserver-deployment.yaml
@@ -12,6 +12,7 @@ spec:
       labels:
         app: opentelemetry-py
     spec:
+      serviceAccountName: opentelemetry-py-sa
       containers:
       - name: flask-app
         image: opentelemetry-py:latest
@@ -32,5 +33,4 @@ spec:
           initialDelaySeconds: 3
           periodSeconds: 5
           failureThreshold: 3
-
 
